Updated to version 0.0.3

--- a/changelogs/0.0.3/release-changelog-manager-0.0.3-info.yml
+++ b/changelogs/0.0.3/release-changelog-manager-0.0.3-info.yml
@@ -1,5 +1,4 @@
-title: 1.0 entry
+version: 0.0.3
 author: ""
-issue: 8
-type: deprecated
+date: 2020-01-20T15:26:54.195Z
 release-branch: release-changelog-manager
